--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express": "^4.17.1",
         "knex": "^0.20.8",
         "knex-cleaner": "^1.3.0",
+        "node-pre-gyp": "^0.14.0",
         "sqlite3": "^4.1.1"
     },
     "devDependencies": {
